Fix the position of small icons. They are not centered right now.

--- a/src/scss/bootstrap.scss
+++ b/src/scss/bootstrap.scss
@@ -260,6 +260,10 @@ li {
   top: 3px;
 }
 
+.mdi.mdi-18px::before {
+  top: 1px;
+}
+
 .btn .mdi::before {
 }
 
